--- a/chimali/src/index.css
+++ b/chimali/src/index.css
@@ -13,15 +13,19 @@ input[type="radio"],
 input[type="file"],
 select,
 textarea {
-  @apply outline-none focus:ring-0 border border-[#ADADAD] block px-4 py-2 w-full
+	@apply outline-none focus:ring-0 border border-[#ADADAD] block px-4 py-2 w-full
   placeholder:font-sans placeholder:font-light placeholder:text-sm placeholder:text-[#888888];
 }
 
 label {
-    @apply font-sans font-semibold text-sm text-[#363636] block;
+	@apply font-sans font-semibold text-sm text-[#363636] block;
 }
 
 ion-icon {
-  font-size: 16px;
-  color: #ffffff;
+	font-size: 16px;
+	color: #ffffff;
+}
+
+.scrolled-link-color {
+	color: #ffffff;
 }
